fixed text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,13 @@ footer .left {
 
 @media (max-width: 768px) 
 {
+	 .button span, #flashingtext
+	 {
+    display: inline-block;
+    vertical-align: top; /* Aligns text to the top */
+    line-height: 1.2;   /* Prevents vertical clipping */
+  }
+
   body {
     background-size: 15%; 
   }
@@ -189,7 +196,7 @@ footer .left {
   }
 
   #logo {
-    width: 70%;
+	width: 40%;
     margin-top: 10%; 
   }
 
@@ -197,6 +204,10 @@ footer .left {
     font-size: 3.5vw;
     margin: -4% 0 0 45%; 
     width: 50%;
+  }
+
+  #picker-title{
+	font-size: 6vw;
   }
 
   .button-wrapper {
@@ -249,6 +260,18 @@ footer .left {
   .button_small {
     font-size: 4vw !important;
   }
+
+
+  #picker-title{
+	font-size: 6vw;
+  }
+
+	.button span, #flashingtext
+	{
+    display: inline-block;
+    vertical-align: top; /* Aligns text to the top */
+    line-height: 1.2;   /* Prevents vertical clipping */
+  }
 }
 
 @media (max-width: 768px) and (orientation: landscape) 
@@ -265,5 +288,16 @@ footer .left {
   .button {
     padding: 1vw 0 !important;
     margin-bottom: 2vw !important;
+  }
+
+  #picker-title{
+	font-size: 6vw;
+  }
+
+	.button span, #flashingtext
+	{
+    display: inline-block;
+    vertical-align: top; /* Aligns text to the top */
+    line-height: 1.2;   /* Prevents vertical clipping */
   }
 }
